# match-kit

./: .gitignore  .release-it.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  biome.json  package.json  pnpm-lock.yaml  rslib.config.ts
src/: index.ts  lib.rs  types.ts
src/wasm/: match_kit.ts
tests/: web.rs
