[package]
name = "match_kit"
version = "0.1.0"
authors = ["dingff <dingff0923@foxmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"
regex = "1.11.1"
js-sys = "0.3.77"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"