[package]
name = "match_kit"
version = "0.1.0"
authors = ["dingff <dingff0923@foxmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"
regex-lite = "0.1.6"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
